<resources>
    <string name="app_name">souvenir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="svn_default_name">Nom de souvenir</string>
    <string name="svn_default_date">Date de souvenir</string>
    <string name="svn_default_lieu">Lieu de souvenir</string>
    <string name="icon_favoris">icon_favoris</string>
    <string name="consultation_souvenir_title">Mon souvenir</string>
    <string name="consultation_souvenir_japanExpo">Japan Expo</string>
    <string name="consultation_souvenir_date">20/06/2019</string>
    <string name="consultation_souvenir_categorie">Manga</string>
    <string name="consultation_souvenir_motsCles">Cosplay</string>
    <string name="consultation_souvenir_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus gravida condimentum. Proin mollis ac lectus a commodo. Nam in gravida lectus. Quisque a felis dapibus, ullamcorper sem id, eleifend diam. Nunc metus eros, vehicula vel lorem vitae, facilisis rhoncus arcu. Duis sit amet convallis ante. Nam vestibulum luctus venenatis.</string>
    <string name="consultation_souvenir_iconImage">Desc</string>
    <string name="img_descr">img_descr</string>
    <string name="editer">Éditer</string>
    <string name="titre">Titre</string>
    <string name="date">Date</string>
    <string name="lieu">Lieu</string>
    <string name="The_name">Nom: The Silence</string>
    <string name="Category">Categorie: Film, Video</string>
    <string name="datep">02/04/2019</string>
    <string name="Texte">The film depicts a world under atta...</string>
</resources>
