<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".ConsultationSouvenir">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0.5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarColoredBackArrow"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="100dp"
                android:gravity="center"
                android:text="@string/consultation_souvenir_title"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/toolbar_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/consultation_souvenir_iconImage"
                app:srcCompat="@drawable/baseline_menu_white_18dp"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="82dp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="330dp"
        android:layout_height="497dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="62dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="171dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/consultation_souvenir_japanExpo"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/consultation_souvenir_date" />

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="10dp"
            android:text="@string/consultation_souvenir_desc" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/consultation_souvenir_motsCles"
            android:textColor="#7F22FD"
            android:textSize="12sp"
            android:onClick="seeKeyWordsMemories" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/consultation_souvenir_categorie"
            android:textColor="#7F22FD"
            android:textSize="12sp"
            android:onClick="seeCategoryMemories"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="435dp"
            android:background="@drawable/button_bg_rounded_corners_dark"
            android:contentDescription="@string/consultation_souvenir_iconImage"
            app:srcCompat="@android:drawable/ic_menu_share" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/consultation_souvenir_iconImage"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/cloud" />


</androidx.constraintlayout.widget.ConstraintLayout>