<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditionUnSouvenir">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="503dp"
        android:layout_height="504dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.520" />

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="186dp"
        android:layout_marginRight="186dp"
        android:layout_marginBottom="427dp"
        android:background="@drawable/rectangle"
        android:hint="@string/The_name"
        android:padding="10dp"
        android:textColorHint="#000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="272dp"
        android:layout_marginLeft="272dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="335dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:inputType="text"
        android:id="@+id/category"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:layout_marginBottom="283dp"
        android:background="@drawable/rectangle"
        android:hint="@string/Category"
        android:padding="9dp"
        android:textColorHint="#000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/date"
        android:inputType="date"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="238dp"
        android:layout_marginRight="238dp"
        android:layout_marginBottom="191dp"
        android:background="@drawable/rectangle"
        android:hint="@string/date"
        android:paddingLeft="40dp"
        android:textColorHint="#000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/texte"
        android:inputType="text"
        android:layout_width="300dp"
        android:layout_height="82dp"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/rectangle"
        android:hint="@string/Texte"
        android:padding="10dp"
        android:textColorHint="#000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
    />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="11dp"

        android:layout_marginLeft="11dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:layout_marginBottom="17dp"
        android:src="@drawable/img1"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:layout_marginBottom="30dp"
        android:src="@drawable/stylo"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:layout_marginBottom="30dp"
        android:src="@drawable/stylo"
        app:layout_constraintBottom_toBottomOf="@+id/texte"
        app:layout_constraintEnd_toEndOf="@+id/texte"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/texte"
        app:layout_constraintTop_toTopOf="@+id/texte"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:layout_marginBottom="30dp"
        android:src="@drawable/stylo"
        app:layout_constraintBottom_toBottomOf="@+id/category"
        app:layout_constraintEnd_toEndOf="@+id/category"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/category"
        app:layout_constraintTop_toTopOf="@+id/category"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:layout_marginBottom="30dp"
        android:src="@drawable/stylo"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:layout_marginBottom="30dp"
        android:src="@drawable/stylo1"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_annuler"
        android:layout_width="109dp"
        android:layout_height="75dp"
        android:background="#FFF"
        android:src="@drawable/btn_annuler"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/btn_valider"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:background="#FFF"
        android:src="@drawable/btn_valider"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>